--- a/introductionlevel2.html
+++ b/introductionlevel2.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&family=Protest+Revolution&family=Sriracha&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="level2.css">
+<link rel="stylesheet" href="allmediaintro2.css">
     <title>Document</title>
 </head>
 <style>
